Development Portal (2019-07-20 shi)
==============================
Add Version 1 banner notice to SAVi
Updated print-friendly css
Add Sector vocab 2 as DAC to SAVi 


Development Portal (2019-07-18 shi)
==============================
Sticky labels for D-Portal-Logs


Development Portal (2019-07-11 shi)
==============================
Replace IS with brackets for policy-markers search filter
Updated D-Portal-Logs


Development Portal (2019-03-22 shi)
==============================
Update and fix recipient-region display
Hide empty location points
Update print-friendly css


Development Portal (2019-03-20 shi)
==============================
Display language code of document-links in SAVi
Update print-friendly and inspire css


Development Portal (2019-03-19 shi)
==============================
Update human-scope links as first narrative
Update print-friendly css


Development Portal (2019-03-18 shi)
==============================
Display non-DAC sectors in SAVi
Update print-friendly css
Import sector_vocab in iati_codes.js
Fix close span for non-DAC sector section
Update length of sectors with DAC
Fix padding css for non-DAC sector wrapper
Update non-DAC section display


Development Portal (2019-01-18 shi)
==============================
Resize country and sector bar graphs
Update print-friendly css
Update Inspire theme legend css


Development Portal (2019-01-18 shi)
==============================
CSS updates to links, faq in footer and header
Update css and text for beta info in footer


Development Portal (2019-01-14 shi)
==============================
Remove dates for transaction graphs
CSS fix for humanitarian-scope
Update print-friendly css
Import example.xml for testing (AA-AAA-123456789-ABC123)


Development Portal (2019-01-11 shi)
==============================
Add legend to individual transaction graphs in SAVi
Update print-friendly css


Development Portal (2019-01-10 shi)
==============================
Update print-friendly css for new graphs