@@ -40,12 +40,20 @@ a.banner_v1:active	{color:#fff;}
 
 /*	Display when humanitarian
 	============================================= */
-iati-activity[humanitarian="1"]:before	{content:"HUMANITARIAN"; padding:10px 40px 7px 40px; font-size:14px; color:#000e20; width:490px; text-align:right; background-color:#ff890c;}
+iati-activity[humanitarian="1"]:before,
+iati-activity[humanitarian="true"]:before	{content:"HUMANITARIAN"; padding:10px 40px 7px 40px; font-size:14px; color:#000e20; width:490px; text-align:right; background-color:#ff890c;}
 
-transaction[humanitarian="1"]			{position:relative;}
-transaction[humanitarian="1"] transaction-date	{position:relative; min-height:85px;}
-transaction[humanitarian="1"]:nth-of-type(1) transaction-date	{position:relative; min-height:130px;}
-transaction[humanitarian="1"]:before	{position:absolute; bottom:40px; left:40px; content:"Humanitarian"; padding:5px; font-size:13px; color:#CCC; background-color:rgba(48,71,103,1); border-radius:4px;}
+transaction[humanitarian="1"],
+transaction[humanitarian="true"]			{position:relative;}
+
+transaction[humanitarian="1"] transaction-date,
+transaction[humanitarian="true"] transaction-date	{position:relative; min-height:85px;}
+
+transaction[humanitarian="1"]:nth-of-type(1) transaction-date,
+transaction[humanitarian="true"]:nth-of-type(1) transaction-date	{position:relative; min-height:130px;}
+
+transaction[humanitarian="1"]:before,
+transaction[humanitarian="true"]:before		{position:absolute; bottom:40px; left:40px; content:"Humanitarian"; padding:5px; font-size:13px; color:#CCC; background-color:rgba(48,71,103,1); border-radius:4px;}
 
 
 /*	Project title
