@@ -2,7 +2,8 @@ Development Portal (2019-07-20 shi)
 ==============================
 Add Version 1 banner notice to SAVi
 Updated print-friendly css
-Add Sector vocab 2 as DAC to SAVi 
+Add Sector vocab 2 as DAC to SAVi
+Add "true" as boolean for humanitarian 
 
 
 Development Portal (2019-07-18 shi)
